[gd_scene load_steps=9 format=2]

[ext_resource path="res://client/client.gd" type="Script" id=1]
[ext_resource path="res://client/lobby/lobby.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://client/login_ui/ip_port_input/only_allow_numericals.gd" type="Script" id=4]
[ext_resource path="res://client/login_ui/connecting.gd" type="Script" id=5]
[ext_resource path="res://fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://client/login_ui/connection_timed_out.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 6 )

[node name="client" type="Node"]
script = ExtResource( 1 )

[node name="lobby" parent="." instance=ExtResource( 2 )]

[node name="input" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="input"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -63.0
margin_right = 188.0
margin_bottom = 300.0
custom_constants/separation = 10

[node name="ip_label" type="Label" parent="input/VBoxContainer"]
margin_right = 365.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "IP:"

[node name="ip_edit" type="LineEdit" parent="input/VBoxContainer"]
margin_top = 26.0
margin_right = 365.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 3 )
text = "127.0.0.1"

[node name="port_label" type="Label" parent="input/VBoxContainer"]
margin_top = 62.0
margin_right = 365.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 3 )
text = "PORT:"

[node name="port_edit" type="LineEdit" parent="input/VBoxContainer"]
margin_top = 88.0
margin_right = 365.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 3 )
text = "31400"
caret_blink = true
script = ExtResource( 4 )

[node name="connect" type="Button" parent="input/VBoxContainer"]
margin_top = 124.0
margin_right = 365.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 48 )
text = "Connect"

[node name="connecting" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.3327
margin_bottom = -2.3327
script = ExtResource( 5 )

[node name="Label" type="Label" parent="connecting"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "CONNECTING..."
align = 1

[node name="connection_timeout" type="Timer" parent="connecting"]
wait_time = 2.0
one_shot = true

[node name="connection_timed_out" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.10805
margin_top = 1.10805
margin_right = -1.10803
margin_bottom = 1.10803
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="connection_timed_out"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -334.0
margin_top = -146.5
margin_right = 334.0
margin_bottom = 146.5

[node name="MarginContainer" type="MarginContainer" parent="connection_timed_out/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -140.0
custom_constants/margin_right = 0

[node name="Label" type="Label" parent="connection_timed_out/Panel/MarginContainer"]
margin_top = 49.0
margin_right = 668.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 3 )
text = "CONNECTION TIMED OUT.
PLEASE VERIFY THE IP & PORT 
ARE CORRECT AND THAT THE SERVER IS ON"
align = 1

[node name="ok" type="Button" parent="connection_timed_out/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -134.0
margin_top = -79.0
margin_right = 134.0
margin_bottom = -32.0
text = "OK"
[connection signal="pressed" from="input/VBoxContainer/connect" to="." method="_on_connect_pressed"]
[connection signal="timeout" from="connecting/connection_timeout" to="." method="_on_connection_timeout_timeout"]
[connection signal="pressed" from="connection_timed_out/Panel/ok" to="connection_timed_out" method="_on_ok_pressed"]
